updated background img on early life and fixed alignment for map iframe

--- a/css/Albums.css
+++ b/css/Albums.css
@@ -26,6 +26,10 @@ margin-left:  105px;
 font-family: Blonde;   
     text-decoration: none;
 }
+label.logo:hover{
+      background-color: #333;/*#ddd*/
+  color: white;
+}
 
 nav ul li {
       display: inline-block;
@@ -89,19 +93,27 @@ background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url(../Early
 #LinkStyle {
     line-height: 100px;
     color: #4dc1ff;
+        padding-left: 14px;
+    padding-right: 14px;
+    padding-bottom: 35px;
+    padding-top: 35px;
 text-decoration: none;
+}
+#LinkStyle:hover{
+      background-color: #333;/*#ddd*/
+  color: white;
 }
 
 
 #FrankInfoHeading {
     color: white;
 font-family: Blonde;
-    padding-top: 200px;
+ /*   padding-top: 200px;*/
     word-spacing: 10px;
-    line-height: 70px;
+/*    line-height: 70px;*/
 text-align: center;
-    margin-right: 50%;
-    padding-bottom: 100px;
+/*    margin-right: 50%;
+    padding-bottom: 100px;*/
 }
 
 h2 {
