--- a/css/main.css
+++ b/css/main.css
@@ -76,7 +76,7 @@ margin-right: 85px;
 }
 
 #FrankBGContainer {
-background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url(../images/ocean-frank-505f67a682a39.jpg);
+background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url(../images/ocean-frank-505f67a682a39.jpg );
   background-repeat: no-repeat;
   background-size: cover;
   background-position: right;
@@ -88,9 +88,17 @@ background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url(../image
 
 }
 #LinkStyle {
-    line-height: 100px;
+    line-height: 70px;
     color: #4dc1ff;
+        padding-left: 14px;
+    padding-right: 14px;
+    padding-bottom: 35px;
+    padding-top: 35px;
 text-decoration: none;
+}
+#LinkStyle:hover{
+      background-color: #333;/*#ddd*/
+  color: white;
 }
 
 
